tests/partest-test/negAnnotWrongLine.scala
object Foo { // error
  def bar: Int = "LOL"
}
